[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/home_missel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/smoke.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Inimigos/rogue_tank_sprites_2/towerDefense_tile252.png" type="Texture" id=3]
[ext_resource path="res://scripts/destructable.gd" type="Script" id=4]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=8]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0679245, 0.230189, 0.524528 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0.578125, 1, 1, 1, 0, 0, 1, 1, 0.960938, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.901919, 0.4802 ), -2.51792, -2.51792, 0, 0, Vector2( 1, 0.005 ), -9.36749, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.9202
height = 21.8465

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ null, ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), null ],
"loop": false,
"name": "boom",
"speed": 10.0
} ]

[node name="home_missel" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="smoke" parent="." instance=ExtResource( 2 )]
position = Vector2( -26.9429, 0.186638 )
amount = 25
lifetime = 1.0

[node name="fire" type="Particles2D" parent="."]
position = Vector2( -16.8654, 0 )
rotation = -3.14159
amount = 50
lifetime = 0.5
local_coords = false
process_material = SubResource( 5 )

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 3.33794, -0.175682 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="area_damage" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource( 4 )
health = 5

[node name="poly" type="CollisionPolygon2D" parent="area_damage"]
polygon = PoolVector2Array( -10.1672, -8.926, -7.38943, -5.9631, -4.05616, -6.9816, 7.79548, -7.16678, 16.1025, -4.13077, 20.1101, -1.05578, 20.001, 2.54552, 15.8588, 5.5669, 7.98066, 8.2959, -5.90797, 8.20331, -9.24124, 10.2866, -15.1671, 10.4255, -20.2596, 8.01812, -19.7503, -7.21307, -15.5374, -8.926 )

[node name="explosion" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "boom"
[connection signal="body_entered" from="." to="." method="_on_home_missel_body_entered"]
[connection signal="area_entered" from="area_damage" to="." method="_on_area_damage_area_entered"]
[connection signal="destroyed" from="area_damage" to="." method="_on_area_damage_destroyed"]
